--- a/web/src/main/resources/static/css/main.css
+++ b/web/src/main/resources/static/css/main.css
@@ -87,3 +87,27 @@
     padding-right: 0px;
     padding-left: 0px;
 }
+
+.match-edit-bottom{
+    padding-bottom: 20px;
+}
+
+
+.modal {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .modal:before {
+        display: inline-block;
+        vertical-align: middle;
+        content: " ";
+        height: 100%;
+    }
+}
+
+.modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+}
