--- a/web/src/main/resources/templates/edit_match.html
+++ b/web/src/main/resources/templates/edit_match.html
@@ -108,76 +108,12 @@
                         <div class="row">
 
                                 <div class="col-md-6 text-right">
-
-                                    <ul class="list-group" id="home-club-line-up">
-                                        <li class="list-group-item clearfix">
-                                            <div class="row">
-                                                <div class="col-md-10 line-up-item">
-                                                    <div class="col-md-12">
-                                                        <span class="player-name"> Dapibus ac facilisis in </span>
-                                                    </div>
-                                                    <div class="col-md-12">
-                                                        <span class="player-position">ZAD</span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-2 player-number">
-                                                    <strong class="">18</strong>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item clearfix">
-                                            <div class="row">
-                                                <div class="col-md-10 line-up-item">
-                                                    <div class="col-md-12">
-                                                        <span class="player-name"> Dapibus ac facilisis in </span>
-                                                    </div>
-                                                    <div class="col-md-12">
-                                                        <span class="player-position">ZAD</span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-2 player-number">
-                                                    <strong class="">18</strong>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                    <ul class="list-group" id="home-club-line-up"></ul>
                                 </div>
                                 <!--Line-up do time Mandante-->
+
                                 <div class="col-md-6">
-                                    <ul class="list-group" id="visitor-club-line-up">
-                                        <li class="list-group-item clearfix">
-                                            <div class="row">
-                                                <div class="col-md-2 player-number">
-                                                    <strong class="">18</strong>
-                                                </div>
-                                                <div class="col-md-10 line-up-item">
-                                                    <div class="col-md-12">
-                                                        <span class="player-name"> Dapibus ac facilisis in </span>
-                                                    </div>
-                                                    <div class="col-md-12">
-                                                        <span class="player-position">ZAD</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item clearfix">
-                                            <div class="row">
-                                                <div class="col-md-2 player-number">
-                                                    <strong class="">18</strong>
-                                                </div>
-                                                <div class="col-md-10 line-up-item">
-                                                    <div class="col-md-12">
-                                                        <span class="player-name"> Dapibus ac facilisis in </span>
-                                                    </div>
-                                                    <div class="col-md-12">
-                                                        <span class="player-position">ZAD</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-
-                                    </ul>
-
+                                    <ul class="list-group" id="visitor-club-line-up"></ul>
                                 </div>
                                 <!--Line-up do time visitante-->
                         </div>
@@ -199,7 +135,6 @@
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
         crossorigin="anonymous"></script>
 
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
