Escalação dos jogadores em uma partida agora é persistida no banco e recuperada quando a página é recarregada.

--- a/web/src/main/resources/static/css/main.css
+++ b/web/src/main/resources/static/css/main.css
@@ -134,3 +134,12 @@ player-position-wrapper{
     text-align: left;
     vertical-align: middle;
 }
+
+hr{
+    margin-top: 0px;
+}
+.line-up-player-status{
+    color: grey;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
