--- a/web/src/main/resources/templates/edit_match.html
+++ b/web/src/main/resources/templates/edit_match.html
@@ -59,14 +59,14 @@
 
     <div class="panel panel-default ">
         <div class="panel-heading">
-            <h3 class="panel-title text-center"> Ficha de Jogo</h3>
+            <h3 class="panel-title text-center">O Jogo</h3>
         </div>
         <div class="panel-body">
             <div class="row">
 
                 <div class="panel panel-default col-md-6 col-md-offset-3 line-up">
                     <div class="panel-heading line-up-starting-header">
-                        <h3 class="panel-title text-center">Titulares</h3>
+                        <h3 class="panel-title text-center">Ficha de Jogo</h3>
                     </div>
 
                     <div class="panel-body">
@@ -104,7 +104,15 @@
 
                             </div>
                         </div>
+                        <!--Botões para escalar times-->
 
+
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <h4 class="line-up-player-status">TITULARES</h4>
+                            </div>
+                        </div>
+                        <hr />
                         <div class="row">
 
                                 <div class="col-md-6 text-right">
@@ -117,6 +125,14 @@
                                 </div>
                                 <!--Line-up do time visitante-->
                         </div>
+                        <!--Line-up dos times-->
+
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <h4 class="line-up-player-status">RESERVAS</h4>
+                            </div>
+                        </div>
+                        <hr />
                     </div>
                 </div>
             </div>
